renamed agent1 to agent_quapsel

--- a/agent_code/agent_quapsel/train_eval.ipynb
+++ b/agent_code/agent_quapsel/train_eval.ipynb
@@ -323,7 +323,7 @@
     "def evaluate_performance(model, rounds):\n",
     "    if os.path.exists(STATSFILE):\n",
     "        os.remove(STATSFILE)\n",
-    "    os.system(f\"python3 ../../main.py play --my-agent agent1 --no-gui --n-rounds {rounds} --save-stats stats.json --model {model}\")\n",
+    "    os.system(f\"python3 ../../main.py play --my-agent agent_quapsel --no-gui --n-rounds {rounds} --save-stats stats.json --model {model}\")\n",
     "\n",
     "def plot_performance():\n",
     "    fig, ax = plt.subplots(figsize=(8,4))\n",
